--- a/src/main/resources/docker-service.properties
+++ b/src/main/resources/docker-service.properties
@@ -2,3 +2,4 @@ DOCKER_HOST_NAME = 127.0.0.1
 DOCKER_HOST_PORT = 2375
 IMAGE_NAME = chensha/bench4q-agent-test
 VCPU_RATIO = 3
+HOST_LINUX_PASSWORD = 123
