--- a/src/main/resources/docker-service.properties
+++ b/src/main/resources/docker-service.properties
@@ -3,3 +3,4 @@ DOCKER_HOST_PORT = 2375
 IMAGE_NAME = chensha/bench4q-agent-test
 VCPU_RATIO = 3
 HOST_LINUX_PASSWORD = 123
+MAINFRAME_HOST_PORT = 5656
