add monitor into api

--- a/src/main/resources/docker-service.properties
+++ b/src/main/resources/docker-service.properties
@@ -1,6 +1,7 @@
 DOCKER_HOST_NAME = 127.0.0.1
 DOCKER_HOST_PORT = 2375
-IMAGE_NAME = chensha/bench4q-agent-test
+IMAGE_NAME = chensha/docker
 VCPU_RATIO = 3
 HOST_LINUX_PASSWORD = 123
 MAINFRAME_HOST_PORT = 5656
+MONITOR_HOST_PORT = 5556
