--- a/src/main/resources/docker-service.properties
+++ b/src/main/resources/docker-service.properties
@@ -2,7 +2,7 @@ DOCKER_HOST_NAME = 127.0.0.1
 DOCKER_HOST_PORT = 2375
 IMAGE_NAME = chensha/docker
 VCPU_RATIO = 3
-HOST_LINUX_PASSWORD = 123
+HOST_LINUX_PASSWORD = once
 MAINFRAME_HOST_PORT = 5656
 MONITOR_HOST_PORT = 5556
 VETHID = 1
