package refactor; using share protocol to implement api

--- a/src/main/resources/docker-service.properties
+++ b/src/main/resources/docker-service.properties
@@ -6,3 +6,7 @@ HOST_LINUX_PASSWORD = once
 MAINFRAME_HOST_PORT = 5656
 MONITOR_HOST_PORT = 5556
 VETHID = 1
+CONTAINER_HEALTH_THRESHOLD = 0.85
+UPLOADBANDWIDTH = 10000
+DOWNLOADBANDWIDTH = 10000
+CPU_CFS_PERIOD_US = 100000
