--- a/docker-monitor/pom.xml
+++ b/docker-monitor/pom.xml
@@ -15,6 +15,11 @@
   </properties>
 
   <dependencies>
+	<dependency>
+		<groupId>log4j</groupId>
+		<artifactId>log4j</artifactId>
+		<version>1.2.17</version>
+	</dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
