--- a/src/main/resources/docker-service.properties
+++ b/src/main/resources/docker-service.properties
@@ -1,10 +1,11 @@
-DOCKER_HOST_NAME = 127.0.0.1
+DOCKER_HOST_NAME = 133.133.134.153
 DOCKER_HOST_PORT = 2375
 IMAGE_NAME = chensha/docker
 VCPU_RATIO = 3
-HOST_LINUX_PASSWORD = once
+HOST_LINUX_PASSWORD = 123456
 MAINFRAME_HOST_PORT = 5656
 MONITOR_HOST_PORT = 5556
+AGENT_HOST_PORT = 6565
 VETHID = 1
 CONTAINER_HEALTH_THRESHOLD = 0.85
 UPLOADBANDWIDTH = 10000
