--- a/docker-monitor/pom.xml
+++ b/docker-monitor/pom.xml
@@ -15,10 +15,10 @@
   </properties>
 
   <dependencies>
-	<dependency>
-		<groupId>log4j</groupId>
-		<artifactId>log4j</artifactId>
-		<version>1.2.17</version>
+	<dependency>  
+	    <groupId>org.slf4j</groupId>  
+	    <artifactId>slf4j-log4j12</artifactId>  
+	    <version>1.7.2</version>  
 	</dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -34,12 +34,12 @@
 	<dependency>
 		<groupId>org.eclipse.jetty</groupId>
 		<artifactId>jetty-server</artifactId>
-		<version>8.1.14.v20131031</version>
+		<version>9.2.5.v20141112</version>
 	</dependency>
 	<dependency>
 		<groupId>org.eclipse.jetty</groupId>
 		<artifactId>jetty-servlet</artifactId>
-		<version>8.1.14.v20131031</version>
+		<version>9.2.5.v20141112</version>
 	</dependency>
 	
 	<dependency>
