--- a/docker-monitor/src/main/resource/log4j.properties
+++ b/docker-monitor/src/main/resource/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger = INFO,WARN,ERROR,FALTAL,D
+log4j.rootLogger = INFO,WARN,ERROR,FALTAL,D,system.out
 
 log4j.appender.WARN = org.apache.log4j.DailyRollingFileAppender
 log4j.appender.WARN.File = logs/monitor.log
@@ -29,3 +29,6 @@ log4j.appender.D.Threshold = INFO
 log4j.appender.D.layout = org.apache.log4j.PatternLayout
 log4j.appender.D.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [ %t:%r ] - [ %p ]  %m%n
 
+log4j.appender.system.out=org.apache.log4j.ConsoleAppender  
+log4j.appender.system.out.layout=org.apache.log4j.PatternLayout
+log4j.appender.system.out.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [ %t:%r ] - [ %p ]  %m%n
