--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
   </properties>
 
   <dependencies>
+  	<dependency>
+		<groupId>org.easymock</groupId>
+		<artifactId>easymock</artifactId>
+		<version>3.3</version>
+	</dependency>
 	<dependency>
 		<groupId>junit</groupId>
 		<artifactId>junit</artifactId>
@@ -89,7 +94,7 @@
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>org.bench4q.docker.service.Main</mainClass>
+							<mainClass>org.bench4q.docker.main.Main</mainClass>
 							<addClasspath>true</addClasspath>
 							<classpathPrefix>lib/</classpathPrefix>
 						</manifest>
