--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.chensha.testapp</groupId>
-  <artifactId>docker-api</artifactId>
+  <groupId>org.bench4q</groupId>
+  <artifactId>bench4q-docker</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>docker-api</name>
+  <name>bench4q-docker</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -26,15 +26,15 @@
 		<version>4.11</version>
 	</dependency>
 	<dependency>
-			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-core-lgpl</artifactId>
-			<version>1.9.13</version>
-		</dependency>
-		<dependency>
-			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-mapper-asl</artifactId>
-			<version>1.9.13</version>
-		</dependency>
+		<groupId>org.codehaus.jackson</groupId>
+		<artifactId>jackson-core-lgpl</artifactId>
+		<version>1.9.13</version>
+	</dependency>
+	<dependency>
+		<groupId>org.codehaus.jackson</groupId>
+		<artifactId>jackson-mapper-asl</artifactId>
+		<version>1.9.13</version>
+	</dependency>
     <dependency>
     	<groupId>com.google.code.gson</groupId>
     	<artifactId>gson</artifactId>
@@ -51,6 +51,11 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</dependency>
 	<dependency>
+		<groupId>org.bench4q</groupId>
+		<artifactId>utils</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</dependency>
+	<dependency>
 		<groupId>org.eclipse.jetty</groupId>
 		<artifactId>jetty-server</artifactId>
 		<version>8.1.14.v20131031</version>
@@ -60,7 +65,6 @@
 		<artifactId>jetty-servlet</artifactId>
 		<version>8.1.14.v20131031</version>
 	</dependency>
-	
 	<dependency>
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-webmvc</artifactId>
@@ -76,6 +80,11 @@
 		<artifactId>spring-test</artifactId>
 		<version>3.2.5.RELEASE</version>
 		<scope>test</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.bench4q</groupId>
+		<artifactId>utils</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
 	</dependency>
   </dependencies>
   	<build>
